<resources>
    <string name="app_name">NoLost</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_setting">清理缓存</string>
    <string name="toolbar_title">NoLost</string>
    <string name="nav_user">个人中心</string>
    <string name="nav_weather">天气</string>
    <string name="user_center_username">用户名</string>
    <string name="user_center_contact">联系方式</string>
    <string name="user_center_location">我的地址</string>
    <string name="user_center_avatar">头像</string>
    <string name="user_center_gender">性别</string>
    <string name="user_center_title">个人中心</string>
    <string name="edit_save">保存</string>
    <string name="search_option">筛选器</string>
    <string name="search_hint">&#160;用户名/物品名称/地点/详细信息</string>
    <string name="login_account_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="login_sign">注册</string>
    <string name="nav_logout">注销</string>
    <string name="publish_title">发布物品</string>
    <string name="publish_goodstype_title">物品状态:</string>
    <string name="publish_goodstype_lost">丢失</string>
    <string name="publish_goodslocation_title">丢失地点:</string>
    <string name="publish_goodsdetail_title">物品詳情:</string>
    <string name="publish_goodsphoto_title">图片描述:</string>
    <string name="publish_goodsphoto_add">添加图片</string>
    <string name="publish_goods_save">提交</string>
    <string name="cliptext">复制这段话进入NoLost：</string>


</resources>
