<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/nav_user">

    </item>
    <item
        android:id="@+id/nav_weather"
        android:icon="@drawable/ic_cloud_white_24dp"
        android:title="@string/nav_weather"></item>
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_people_white_24dp"
        android:title="聊天列表"></item>
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/nav_setting"></item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_directions_run_white_24dp"
        android:title="@string/nav_logout"
        android:visible="false">

    </item>
</menu>